@@ -1,3 +1,3 @@
 void bootRamLinux(const char *kernel, uint32 kernelSize
                   , const char *initrd, uint32 initrdSize
-                  , const char *cmdline, int bootViaResume=0);
+                  , int bootViaResume=0);
