@@ -1,8 +1,8 @@
-/* This assembler file imports a kernel and initrd (along with a
- * command line) into a binary object.  This allows a kernel to be
- * linked into an executable and extracted at run time. */
+/* This assembler file imports a kernel, initrd, and haret script into
+ * a binary object.  This allows a kernel to be linked into an
+ * executable and extracted at run time. */
         .section .rdata
-        .global  kernel_data
+        .global kernel_data
 kernel_data:
         .incbin LIN_KERNEL
         .global kernel_data_end
@@ -12,6 +12,9 @@ initrd_data:
         .incbin LIN_INITRD
         .global initrd_data_end
 initrd_data_end:
-        .global cmdline_data
-cmdline_data:
-        .asciz  LIN_CMD
+        .global script_data
+script_data:
+        .incbin LIN_SCRIPT
+        .byte 0
+
+        .end
