@@ -1,5 +1,11 @@
 next version <kevin@koconnor.net>
 
+  * The linload build support has been modified to support linking in
+    a haret script.  The last line in the script should run the new
+    "RAMBOOT" command.  An example build would look something like:
+
+    make linload SCRIPT=myharet.txt KERNEL=zImage INITRD=abc
+
   * Add new machines: hermes, wizard, g500
 
   * Add mechanism to check for DMA corruption during kernel load by
